--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -28,7 +28,7 @@ featureFlags:
   enableNodeDetailsCollector: false
   enableSkipScalingOnInsufficientData: true
   enableCheckDatabaseHealth: false
-  enableCostSavingsSettingsRefresh: false
+  enableCostSavingsSettingsRefresh: true
 
 # Cost refresh batching configuration (shared by thorasApiServerV2 and thorasWorker)
 costRefreshBatching:
@@ -270,6 +270,7 @@ thorasDashboard:
     cost_simulator: false
     rolling_savings: true
     cost_breakdown_v2: true
+    node_overrides: true
   # Set to true to apply global affinity rules to this component
   useGlobalAffinity: true
   # Component-specific affinity (merged with global if useGlobalAffinity is true)
