Don't create ASTs for disabled components

--- a/charts/thoras/templates/monitor/ast.yaml
+++ b/charts/thoras/templates/monitor/ast.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.thorasMonitor.enabled }}
 {{- if .Values.featureFlags.thorasManageThoras.enabled }}
 apiVersion: thoras.ai/v1
 kind: AIScaleTarget
@@ -24,4 +25,5 @@ spec:
         lowerbound: 1Mi
       name: thoras-monitor
     mode: {{ .Values.featureFlags.thorasManageThoras.mode | default "recommendation" }}
+{{- end }}
 {{- end }}
