Enable node details collector

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -25,7 +25,7 @@ imagePullPolicy: "IfNotPresent"
 logLevel: info
 
 featureFlags:
-  enableNodeDetailsCollector: false
+  enableNodeDetailsCollector: true
   enableSkipScalingOnInsufficientData: true
   enableCheckDatabaseHealth: false
   enableCostSavingsSettingsRefresh: true
