docs: Updated terminology (Kubernetes instead of K8s) in description for ForecastMetric.value

--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -1034,8 +1034,8 @@ spec:
                           anyOf:
                           - type: integer
                           - type: string
-                          description: Value is the forecasted value in K8s resource
-                            format (e.g., "11m" for CPU, "24Mi" for memory)
+                          description: Value is the forecasted value in Kubernetes
+                            resource format (e.g., "11m" for CPU, "24Mi" for memory)
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
                       required:
