--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -1003,6 +1003,93 @@ spec:
             properties:
               labelSelector:
                 type: string
+              latestSuggestion:
+                description: LatestSuggestion contains the most recent scaling recommendations
+                  from Thoras AI
+                properties:
+                  end:
+                    format: date-time
+                    type: string
+                  forecastedTotals:
+                    description: ForecastedTotals contains predicted resource usage
+                      metrics.
+                    items:
+                      description: ForecastMetric represents a predicted resource
+                        usage value for a specific metric.
+                      properties:
+                        metric:
+                          description: Metric name - can be "cpu", "memory", "heap",
+                            "non-heap", etc.
+                          type: string
+                        targetName:
+                          description: TargetName is the name of the deployment or
+                            container this metric applies to
+                          type: string
+                        targetType:
+                          description: |-
+                            TargetType indicates whether this is a deployment-level or container-level metric
+                            Values: "deployment" or "container"
+                          type: string
+                        value:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          description: Value is the forecasted value in Kubernetes
+                            resource format (e.g., "11m" for CPU, "24Mi" for memory)
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                      required:
+                      - metric
+                      - targetName
+                      - targetType
+                      - value
+                      type: object
+                    type: array
+                  resourceRecommendations:
+                    description: ResourceRecommendations contains optimal resource
+                      requests for each container.
+                    items:
+                      description: ContainerRecommendation contains optimal resource
+                        allocation recommendations for a single container.
+                      properties:
+                        container:
+                          description: Container name
+                          type: string
+                        recommendations:
+                          description: Resource recommendations for this container
+                          items:
+                            description: ResourceRecommendation represents an optimal
+                              resource allocation for a specific resource type.
+                            properties:
+                              resource:
+                                description: Resource type - "cpu" or "memory"
+                                type: string
+                              value:
+                                anyOf:
+                                - type: integer
+                                - type: string
+                                description: Value in Kubernetes resource format (e.g.,
+                                  "12m" for CPU, "256Mi" for memory)
+                                pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                x-kubernetes-int-or-string: true
+                            required:
+                            - resource
+                            - value
+                            type: object
+                          type: array
+                      required:
+                      - container
+                      - recommendations
+                      type: object
+                    type: array
+                  start:
+                    description: Time window for this suggestion
+                    format: date-time
+                    type: string
+                required:
+                - end
+                - start
+                type: object
               previousVerticalMode:
                 type: string
               replicas:
