Set thoras.labels on ASTs

--- a/charts/thoras/templates/forecast-worker/ast.yaml
+++ b/charts/thoras/templates/forecast-worker/ast.yaml
@@ -3,7 +3,7 @@ apiVersion: thoras.ai/v1
 kind: AIScaleTarget
 metadata:
   labels:
-    app.kubernetes.io/managed-by: Helm
+    {{- include "thoras.labels" . | nindent 4 }}
   name: thoras-forecast-worker
   namespace: {{ .Release.Namespace }}
 spec:
