--- a/charts/thoras/templates/slm-api/ast.yaml
+++ b/charts/thoras/templates/slm-api/ast.yaml
@@ -4,7 +4,7 @@ apiVersion: thoras.ai/v1
 kind: AIScaleTarget
 metadata:
   labels:
-    app.kubernetes.io/managed-by: Helm
+    {{- include "thoras.labels" . | nindent 4 }}
   name: thoras-slm-api
   namespace: {{ .Release.Namespace }}
 spec:
