Added cast status

--- a/charts/thoras/templates/operator/rbac.yaml
+++ b/charts/thoras/templates/operator/rbac.yaml
@@ -100,6 +100,8 @@ rules:
   - 'AIScaleTarget'
   - 'aiscaletargets/status'
   - 'aiscaletargets'
+  - 'clusteraiscaletemplates'
+  - 'clusteraiscaletemplates/status'
   verbs:
   - '*'
 ---
