feat: enable feature flag for CRD suggestion reads

--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -120,6 +120,8 @@ spec:
           {{- end }}
           - name: SERVICE_ENABLE_SKIP_SCALING_ON_INSUFFICIENT_DATA
             value: {{ .Values.featureFlags.enableSkipScalingOnInsufficientData | ternary "true" "false" | quote }}
+          - name: SERVICE_ENABLE_CRD_SUGGESTION_READS
+            value: {{ .Values.featureFlags.enableCRDSuggestionReads | ternary "true" "false" | quote }}
         command: [
           "/app/operator"
         ]
