--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -28,6 +28,7 @@ logLevel: info
 featureFlags:
   enableNodeDetailsCollector: true
   enableSkipScalingOnInsufficientData: true
+  enableCRDSuggestionReads: false
   thorasManageThoras:
     enabled: false
   enableCheckDatabaseHealth: false
