--- a/charts/thoras/templates/operator/webhooks-certgen-clusterrolebinding.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-clusterrolebinding.yaml
@@ -8,7 +8,7 @@ metadata:
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
     "helm.sh/hook-weight": "-10"
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 4 }}
     app.kubernetes.io/component: webhook-certgen
 roleRef:
   apiGroup: rbac.authorization.k8s.io
