--- a/charts/thoras/templates/operator/webhooks-certgen-registry-secret.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-registry-secret.yaml
@@ -9,7 +9,7 @@ metadata:
   name: thoras-secret-registry-certgen
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 4 }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "-5"
