--- a/charts/thoras/templates/api-server-v2/pdb.yaml
+++ b/charts/thoras/templates/api-server-v2/pdb.yaml
@@ -5,7 +5,7 @@ metadata:
   name: thoras-api-server-v2
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasApiServerV2.labels) | nindent 4 }}
 spec:
   minAvailable: 1
   selector:
