--- a/charts/thoras/templates/collector/ast.yaml
+++ b/charts/thoras/templates/collector/ast.yaml
@@ -3,7 +3,7 @@ apiVersion: thoras.ai/v1
 kind: AIScaleTarget
 metadata:
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.metricsCollector.labels) | nindent 4 }}
   name: metrics-collector
   namespace: {{ .Release.Namespace }}
 spec:
