--- a/charts/thoras/templates/collector/service.yaml
+++ b/charts/thoras/templates/collector/service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: timescale
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "thoras.labels" (mustMerge (dict "Values" (mustMerge (dict "labels" .Values.metricsCollector.labels) .Values)) .) | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.metricsCollector.labels) | nindent 4 }}
 spec:
   ports:
   - name: postgres
@@ -21,7 +21,7 @@ metadata:
   name: thoras-blob-api
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "thoras.labels" (mustMerge (dict "Values" (mustMerge (dict "labels" .Values.metricsCollector.labels) .Values)) .) | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.metricsCollector.labels) | nindent 4 }}
 spec:
   ports:
   - name: http
