--- a/charts/thoras/templates/operator/pdb.yaml
+++ b/charts/thoras/templates/operator/pdb.yaml
@@ -5,7 +5,7 @@ metadata:
   name: thoras-operator
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 4 }}
 spec:
   minAvailable: 1
   selector:
