--- a/charts/thoras/templates/operator/service-account.yaml
+++ b/charts/thoras/templates/operator/service-account.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 4 }}
   name: {{ .Values.thorasOperator.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
 imagePullSecrets:
