--- a/charts/thoras/templates/operator/webhooks-certgen-create.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-create.yaml
@@ -9,7 +9,7 @@ metadata:
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
     "helm.sh/hook-weight": "-5"
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 4 }}
     app.kubernetes.io/component: webhook-certgen
 spec:
   ttlSecondsAfterFinished: 300
@@ -17,7 +17,7 @@ spec:
     metadata:
       name: thoras-tls-certsgen-create
       labels:
-        {{- include "thoras.labels" . | nindent 8 }}
+        {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 8 }}
         app.kubernetes.io/component: webhook-certgen
     spec:
       restartPolicy: OnFailure
