--- a/charts/thoras/templates/operator/webhooks-certgen-serviceaccount.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-serviceaccount.yaml
@@ -9,5 +9,5 @@ metadata:
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
     "helm.sh/hook-weight": "-10"
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 4 }}
     app.kubernetes.io/component: webhook-certgen
