--- a/charts/thoras/templates/operator/webhooks.yaml
+++ b/charts/thoras/templates/operator/webhooks.yaml
@@ -4,7 +4,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   name: "pods.thoras.ai"
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 4 }}
 webhooks:
 - name: "pods.thoras.ai"
   namespaceSelector:
@@ -50,7 +50,7 @@ kind: ValidatingWebhookConfiguration
 metadata:
   name: "validation.thoras.ai"
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasOperator.labels) | nindent 4 }}
 webhooks:
   - name: "ast-validation.thoras.ai"
     namespaceSelector:
