--- a/charts/thoras/templates/slm-api/ast.yaml
+++ b/charts/thoras/templates/slm-api/ast.yaml
@@ -4,7 +4,7 @@ apiVersion: thoras.ai/v1
 kind: AIScaleTarget
 metadata:
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.resourceLabels" (dict "root" . "component" .Values.thorasSlmAgent.labels) | nindent 4 }}
   name: thoras-slm-api
   namespace: {{ .Release.Namespace }}
 spec:
